# basic-mcp-agent

./: .gitignore  README.md
agent/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
agent/notebooks/: use_monitized_mcp.ipynb
agent/src/: graph.py
example_mcp_server/: .env.example  README.md  main.py  pyproject.toml
